public/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-size: 100%;
}

html,
body {
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;
}

.content {
  flex: 1 0 auto;
}

.footer {
  flex-shrink: 0;
}

p {
    font-size: 1rem;
    margin-bottom: 1.4rem;
}

main {
    width: 960px;
    margin: 20px auto;
    font-family: sans-serif;
    line-height: 1.4;
}

pre.lager {
    background: #ace;
    border-left: 3px solid #57c;
    padding: 10px;
    box-sizing: border-box;
    margin-bottom: 1.4rem;
    font-size: 1.2rem;
}

code.javascript {
    font-size: 1rem;
}

h1 {
    font-size: 2.4rem;
    margin-bottom: 1.4rem;
}

h2 {
    font-size: 2rem;
    margin-bottom: 1.4rem;
}

h3 {
    font-size: 1.8rem;
    margin-bottom: 1.4rem;
}

ol {
    padding-left: 2rem;
    margin-bottom: 1.4rem;
}

.footer {
    background-color: #13395f;
    color: white;
    padding: 4rem 0;
}

.inner-footer {
    width: 960px;
    margin: 0 auto;
    font-family: sans-serif;
}

.inner-footer a {
    color: white;
}

.terms {
    margin-bottom: 5.6rem;
}

form {
    margin-bottom: 5.6rem;
}

label {
    font-weight: bold;
    display: block;
    font-size: 1rem;
}

input {
    font-size: 1rem;
    margin-bottom: 1.4rem;
}

input[type=text],
input[type=submit] {
    display: block;
}

.error {
    padding: 1.4rem;
    background: #eaa;
    border-left: 3px solid #c55;
}

@media (min-width: 64em) {
    html {
        font-size: 112.5%;
    }
}

